refactor: remove unused methods, constants, and deduplicate code
- Remove 17 unused methods across Player, Combination, ThemeController,
  UIFonts, StatisticsController, and SoundController
- Remove 11 unused constants from GameConstants (EXIT_WINDOW_*,
  SCOREBOARD_HEIGHT, PADDING_STANDARD, CHECKBOX_*, *_COLOR_HEX,
  ERROR_CANNOT_CLICK, MSG_EXIT_CONFIRM, MSG_BONUS_AWARDED)
- Extract Combination.sumAll() to deduplicate dice sum loops in
  Chance, ThreeOfKind, and FourOfKind
- Remove redundant index field/parameter from Combination hierarchy
- Inline Player.displayCombos() into toString()
- Inline SoundController.copyResourceToTempFile() wrapper
- Make Player.playerName and StatisticsController map fields final
- Remove unused imports (Color, IOException)
- Update tests to match API changes